--- a/demo-server/pom.xml
+++ b/demo-server/pom.xml
@@ -65,5 +65,12 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- RxJava 依赖 -->
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.2.19</version>
+        </dependency>
     </dependencies>
 </project>
